--- a/params/java-app/build
+++ b/params/java-app/build
@@ -1,4 +1,4 @@
-PIPELINE_SOURCE_REPOSITORY_URL=https://github.com/rht-labs/automation-api
-PIPELINE_SOURCE_REPOSITORY_REF=dev-demo
-NAME=java-app
+PIPELINE_SOURCE_REPOSITORY_URL=https://github.com/Johnny2136/openshift-tasks.git
+PIPELINE_SOURCE_REPOSITORY_REF=master
+NAME=openshift-tasks
 S2I_BASE_IMAGE=redhat-openjdk18-openshift:1.2
