--- a/inventory/host_vars/projects-and-policies.yml
+++ b/inventory/host_vars/projects-and-policies.yml
@@ -6,19 +6,19 @@ openshift_cluster_content:
 - object: projectrequest
   content:
   - name: ci-cd
-    template: "https://raw.githubusercontent.com/redhat-cop/cluster-lifecycle/v3.9.0/files/projectrequest/template.yml"
+    template: "{{ playbook_dir }}/openshift-templates/project-requests/template.yml"
     action: create
     params: "{{ playbook_dir }}/params/projectrequests/ci-cd"
     tags:
     - projects
   - name: dev
-    template: "https://raw.githubusercontent.com/redhat-cop/cluster-lifecycle/v3.9.0/files/projectrequest/template.yml"
+    template: "{{ playbook_dir }}/openshift-templates/project-requests/template.yml"
     action: create
     params: "{{ playbook_dir }}/params/projectrequests/dev"
     tags:
     - projects
   - name: demo
-    template: "https://raw.githubusercontent.com/redhat-cop/cluster-lifecycle/v3.9.0/files/projectrequest/template.yml"
+    template: "{{ playbook_dir }}/openshift-templates/project-requests/template.yml"
     action: create
     params: "{{ playbook_dir }}/params/projectrequests/test"
     tags:
